--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "build": ""
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
