--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node dist/index.js",
+    "start:dev": "cross-env NODE_ENV=development node dist/index.js",
     "build": "tsc"
   },
   "repository": {
@@ -23,9 +24,13 @@
   },
   "homepage": "https://github.com/schollsebastian/Discord-Bot-Template#readme",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/ws": "^7.4.0",
+    "cross-env": "^7.0.3",
     "typescript": "^4.2.2"
   }
 }
