--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "start:dev": "cross-env NODE_ENV=development node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,10 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/ws": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "cross-env": "^7.0.3",
+    "eslint": "^7.21.0",
     "typescript": "^4.2.2"
   }
 }
