--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "start:dev": "cross-env NODE_ENV=development node dist/index.js",
+    "start:dev": "npm run build && cross-env NODE_ENV=development node dist/index.js",
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'"
   },
