--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
     "allowJs": false,
     "removeComments": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
