--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   your-bot:
     build: .
+    restart: always
     environment:
       NODE_ENV: production
     volumes:
