--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "start:dev": "npm run build && cross-env NODE_ENV=development node dist/index.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon --watch src src/index.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'"
   },
@@ -35,6 +35,8 @@
     "@typescript-eslint/parser": "^4.16.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.21.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
 }
