Add space-before-blocks linting rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,10 @@
       "error",
       "always"
     ],
-    "@typescript-eslint/no-non-null-assertion": 0
+    "@typescript-eslint/no-non-null-assertion": 0,
+    "space-before-blocks": [
+      "error",
+      "always"
+    ]
   }
 }
